--- a/Zipssa/app/src/main/res/values/strings.xml
+++ b/Zipssa/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
 	<string name="home">홈</string>
 	<string name="back">뒤로가기</string>
 	<string name="add_alarm_title">알림 추가</string>
+
+	<string name="underline_medicine_effect"><u>효능 및 효과</u></string>
+	<string name="underline_medicine_dosage"><u>용법용량</u></string>
+	<string name="underline_medicine_validity"><u>유효기간</u></string>
+	<string name="underline_medicine_preservation"><u>보관법</u></string>
+	<string name="underline_medicine_warning"><u>주의사항</u></string>
 </resources>
