--- a/Zipssa/app/src/main/res/values/strings.xml
+++ b/Zipssa/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
 	<string name="app_name">Zipssa</string>
+	<string name="kakao_app_key">a09040141b3138be2ba1d46e923b3faa</string>
+
 	<string name="home">홈</string>
 	<string name="back">뒤로가기</string>
 	<string name="add_alarm_title">알림 추가</string>
